--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                 <div class="product-grid">
                     <div class="product-card">
                         <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/mbp14-m3-max-pro-silver-gallery2-202310?wid=4000&hei=3074&fmt=jpeg&qlt=90&.v=1698259112999" alt="MacBook M3 Pro">
-                        <h3>MacBook M3 Pro</h3>
+                        <h3>MacBook Pro</h3>
                         <p>$2,450</p>
                         <a href="#" class="btn">Buy Now</a>
                     </div>
                     <div class="product-card">
                         <img src="https://www.maplestore.in/cdn/shop/files/iPad_Pro_11_M4_WiFi_Silver_PDP_Image_Position_1b__en-IN_8de5f875-e789-48a7-978d-993b43f7158a_1445x.jpg?v=1716471122" alt="iPad Pro M4">
-                        <h3>iPad Pro M4</h3>
+                        <h3>iPad Pro</h3>
                         <p>$1,450</p>
                         <a href="#" class="btn">Buy Now</a>
                     </div>
