--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
                 <h2>Featured Products</h2>
                 <div class="product-grid">
                     <div class="product-card">
-                        <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/mbp14-m3-max-pro-silver-gallery2-202310?wid=4000&hei=3074&fmt=jpeg&qlt=90&.v=1698259112999" alt="MacBook M3 Pro">
+                        <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/mbp14-m3-max-pro-silver-gallery2-202310?wid=4000&hei=3074&fmt=jpeg&qlt=90&.v=1698259112999" alt="MacBook Pro">
                         <h3>MacBook Pro</h3>
                         <p>$2,450</p>
                         <a href="#" class="btn">Buy Now</a>
                     </div>
                     <div class="product-card">
-                        <img src="https://www.maplestore.in/cdn/shop/files/iPad_Pro_11_M4_WiFi_Silver_PDP_Image_Position_1b__en-IN_8de5f875-e789-48a7-978d-993b43f7158a_1445x.jpg?v=1716471122" alt="iPad Pro M4">
+                        <img src="https://www.maplestore.in/cdn/shop/files/iPad_Pro_11_M4_WiFi_Silver_PDP_Image_Position_1b__en-IN_8de5f875-e789-48a7-978d-993b43f7158a_1445x.jpg?v=1716471122" alt="iPad Pro">
                         <h3>iPad Pro</h3>
                         <p>$1,450</p>
                         <a href="#" class="btn">Buy Now</a>
                     </div>
                     <div class="product-card">
-                        <img src="https://store.storeimages.cdn-apple.com/1/as-images.apple.com/is/iphone-15-pro-finish-select-202309-6-7inch-whitetitanium?wid=5120&hei=2880&fmt=webp&qlt=70&.v=VW44dkRidm5wazhwcGxtL0cyaEJ2VTkrNXBUdUJSK1k4NE5seUtJaW80ZkRmbnd3M3NkTWdNTTIrREE3akpCaWlCQmV2WTA2cncybDF2YzFnKzI0S2prMCtUNWwzYWR0UVU3TWVsbEdUeXRjODhrWk5XcFl2eGdtMU93TW5UemMxS0dMN3JEVTdzTGJjdjBqMFgrMm53PT0=&traceId=1" alt="Product 3">
+                        <img src="https://store.storeimages.cdn-apple.com/1/as-images.apple.com/is/iphone-15-pro-finish-select-202309-6-7inch-whitetitanium?wid=5120&hei=2880&fmt=webp&qlt=70&.v=VW44dkRidm5wazhwcGxtL0cyaEJ2VTkrNXBUdUJSK1k4NE5seUtJaW80ZkRmbnd3M3NkTWdNTTIrREE3akpCaWlCQmV2WTA2cncybDF2YzFnKzI0S2prMCtUNWwzYWR0UVU3TWVsbEdUeXRjODhrWk5XcFl2eGdtMU93TW5UemMxS0dMN3JEVTdzTGJjdjBqMFgrMm53PT0=&traceId=1" alt="Iphone 15 Pro">
                         <h3>Iphone 15 Pro</h3>
                         <p>$2,150</p>
                         <a href="#" class="btn">Buy Now</a>
